# SoA

./: .dev.env  .gitignore  Dockerfile  Makefile  Procfile  README.md  bottle.py  contactandFAQ.html  docker-compose.yml  index.html  local_setup.sh  netlify.toml  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/: CODEOWNERS
assets/css/: core.css  style.css
css/: bootstrap.css  responsive.css  style.css  style.css.map
css/counter-up/: jquery.counterup.js
js/: theme.js
local/default/: Makefile  env
scss/: _about.scss  _blog.scss  _breadcrumb.scss  _button.scss  _contact.scss  _elements.scss  _footer.scss  _header.scss  _number.scss  _portfolio.scss  _predefine.scss  _services.scss  _team.scss  _variables.scss  style.scss
soa/: __init__.py  __main__.py  housekeeping.py  mailer.py  models.py  plugins.py  pyproject.toml  server.py  settings.py
soa/soa/: __main__.py
soa/tests/: test_soa.py
soa/tracks/: __init__.py  core.py
soa/tracks/adsa/: __init__.py
soa/tracks/dsa/: 1.md  __init__.py
soa/tracks/ml/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  __init__.py
soa/tracks/python/: 1.md  2.md  3.md  4.md  __init__.py
src/: Makefile  pyproject.toml
src/soa/: __main__.py  mailer.py  models.py  plugins.py  server.py  settings.py
src/views/: account.html  alert.html  base.html  dashboard.html  login.html
tracks/dsa/: 2.md  meta.json
tracks/python/: meta.json
vendors/animate-css/: wow.min.js
views/: account.html  alert.html  base.html  certificate.html  crumbs.html  login.html  meta.html  task.html  theme.html  tracks.html
(+10 files in other folders)
