[tool.poetry]
name = "soa"
version = "0.1.0"
description = ""
authors = ["arjoonn sharma <arjoonn.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
black = "^19.10b0"
bottle = "^0.12.18"
bottle-tools = "^2019.12.22"
psycopg2-binary = "^2.8.5"
jinja2 = "^2.11.1"
gunicorn = "^20.0.4"
sqlalchemy = "^1.3.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
